# aether-django-sdk-library

./: .gitignore  .travis.yml  Dockerfile  MANIFEST.in  README.md  build.sh  docker-compose.yml  entrypoint.sh  manage.py  requirements.txt  setup.cfg  setup.py  test.py
.circleci/: ci_release.sh  ci_test.sh  config.yml
aether/sdk/: __init__.py  admin.py  apps.py  cache.py  context_processors.py  unittest.py  utils.py
aether/sdk/auth/: authentication.py  utils.py  views.py
aether/sdk/conf/: log_filter.py  settings.py  settings_aether.py  storages.py  urls.py
aether/sdk/drf/: fields.py  pagination.py  renderers.py  serializers.py  views.py
aether/sdk/health/: utils.py  views.py
aether/sdk/multitenancy/: README.md  __init__.py  admin.py  apps.py  models.py  permissions.py  serializers.py  utils.py  views.py
aether/sdk/redis/: README.md  task.py
aether/sdk/templatetags/: eha_tags.py
aether/sdk/tests/: __init__.py  settings.py  test_apps.py  test_cache.py  urls.py  (+3 more)
django_eha_sdk/: __init__.py  apps.py  context_processors.py  unittest.py  utils.py
django_eha_sdk/auth/: utils.py  views.py
django_eha_sdk/conf/: settings.py  urls.py
django_eha_sdk/drf/: renderers.py  serializers.py
django_eha_sdk/health/: utils.py  views.py
django_eha_sdk/multitenancy/: README.md  __init__.py  admin.py  apps.py  models.py  permissions.py  utils.py  views.py
django_eha_sdk/tests/: settings.py  test_apps.py  test_context_processors.py  test_settings.py  test_urls.py  test_utils.py
scripts/: build.sh  install.sh  test.ini  test.sh  travis_release.sh  travis_test.sh
(+113 files in other folders)
