[bdist_wheel]
universal = 0

[metadata]
license_file = LICENSE

[flake8]
max-line-length = 100
exclude = migrations

inline-quotes = single
multiline-quotes = '''
docstring-quotes = '''

[coverage:run]
branch = true
source = /code/django_eha_sdk
omit = *tests*

[coverage:report]
omit = *tests*, *settings.py
show_missing = true
fail_under = 85
