[bdist_wheel]
universal = 0

[metadata]
license_file = LICENSE

[flake8]
exclude = venv, migrations, venv
max-line-length = 100

docstring-quotes = '''
inline-quotes = single
multiline-quotes = '''

[coverage:run]
branch = true
omit = venv, *tests*
source = aether

[coverage:report]
fail_under = 90
omit = venv, *tests*, *settings.py
show_missing = true
